8244946: fatal error: memory leak: allocating without ResourceMark with -XX:+Verbose -Xlog:methodhandles

Fix crash due to a missing ResourceMark when logging methodhandles with Verbose.

Reviewed-by: dcubed, dholmes, coleenp